syntax = "proto3";

service WebsiteService {
   rpc AddScript (ScriptParams) returns (Empty) {}
}

message ScriptParams {
   string scriptBuffer = 1;
   string domain = 2;
   string cdnSourceStripped = 3;
}

message Empty {}